data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2228.wast
;; 9. **Test 9: Exception Handling with Nested Blocks and Branches**    - **Description:** Nested blocks containing `throw` instructions and corresponding `catch` blocks, with `br` instructions within them.    - **Constraint:** Verifies correct interaction of exception handling and nested block control flow.    - **Mismanagement Check:** Validates the proper handling of control flow when exceptions occur within nested structures and the branching out of exceptions.

(assert_invalid
 (module
  (type $exn (func (result i32)))
  (event $ev (type $exn))
  (func $exception-handling-nested-blocks
   (block (result i32)
    (block (result i32)
     (throw $ev)
     (unreachable)
    )
    (br 0 (i32.const 1))
   )
  )
 )
 "type mismatch"
)